samples/_failures_safe/1761130701_1571ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a77da040.c: In function ‘main’:
./samples/SAFE/__tmp_a77da040.c:189:5: error: expected declaration or statement at end of input
  189 |     printf("Initial state: IDLE\n");
      |     ^~~~~~
